<resources>
    <string name="account">ACCOUNT</string>
    <string name="account_ending_in">Account ending in</string>
    <string name="add_message">Add a message</string>
    <string name="add_notes">Add Notes</string>
    <string name="add_notes_detail">Add some notes or tags to this transaction</string>
    <string name="all_accounts">All Accounts</string>
    <string name="analytics">Analytics</string>
    <string name="app_name">ImpactFintech</string>
    <string name="ask_money">Ask someone to send you money</string>
    <string name="average_spent">Average spent</string>
    <string name="balance">$5,432.43</string>
    <string name="by_bank_transfer_or_link">By bank transfer or link</string>
    <string name="card_last_four_digit">•••• 2183</string>
    <string name="category">Category</string>
    <string name="change">CHANGE</string>
    <string name="contact_support">Contact support to query this transaction</string>
    <string name="contact_us">Contact us about your card</string>
    <string name="contacts">Contacts</string>
    <string name="current_account">Current Account</string>
    <string name="date_and_time">Date &amp; Time</string>
    <string name="email">Email</string>
    <string name="entertainment">Entertainment</string>
    <string name="exit">Exit</string>
    <string name="expense">Expense</string>
    <string name="freeze_card">Freeze card</string>
    <string name="forgot_pin">Forgot your PIN?</string>
    <string name="get_started">Get started</string>
    <string name="header">impact</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="impact_music_app_premium">Impact Music App Premium</string>
    <string name="lost_or_stolen">Lost or stolen? Freeze it here</string>
    <string name="manage">MANAGE</string>
    <string name="manage_card">Manage card</string>
    <string name="manage_wallet">Manage your\nWallet\nwith Impact</string>
    <string name="nearby">Nearby</string>
    <string name="number_of_transactions">Number of transactions</string>
    <string name="payments">Payments</string>
    <string name="pay_again">Pay again</string>
    <string name="pay_someone">Pay Someone</string>
    <string name="recurring">Recurring</string>
    <string name="request_money">Request money</string>
    <string name="search_for_payees">Search for payees</string>
    <string name="see_all">See all</string>
    <string name="send_dollar">Send $</string>
    <string name="send_money">Send Money</string>
    <string name="settings">Settings</string>
    <string name="sign_in">Sign in</string>
    <string name="something_wrong">Something wrong?</string>
    <string name="splash_text">Find any place in the world in seconds, suited to your needs and preferences.</string>
    <string name="support">Support</string>
    <string name="terminate">Terminate and more</string>
    <string name="total_spent">Total spent</string>
    <string name="transaction">Transaction</string>
    <string name="profile">Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="phone_number">Phone Number</string>
    <string name="company_name">Company Name</string>
    <string name="company_email">Company Email Address</string>
    <string name="title_position">Title/Position</string>
    <string name="city">City</string>
    <string name="save">Save</string>
    <string name="profile_was_updated">Profile was updated</string>
</resources>