<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/home"/>
    <item
        android:id="@+id/payments"
        android:enabled="true"
        android:icon="@drawable/arrow_right"
        android:title="@string/payments"/>
    <item
        android:id="@+id/history"
        android:enabled="true"
        android:icon="@drawable/history"
        android:title="@string/history" />
    <item
        android:id="@+id/analytics"
        android:enabled="true"
        android:icon="@drawable/baseline_profile_24"
        android:title="@string/profile"/>
    <item
        android:id="@+id/exit"
        android:enabled="true"
        android:icon="@drawable/question_label"
        android:title="@string/exit"/>
</menu>