<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.splash.SplashActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/header_font"
            android:letterSpacing="0.16"
            android:text="@string/header"
            android:textColor="@color/text_color"
            android:textSize="66sp"
            app:layout_constraintEnd_toStartOf="@+id/header_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/header_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="55dp"
            android:background="@drawable/circle_shape"
            app:layout_constraintStart_toEndOf="@+id/header"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/splashImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/splash_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header" />

        <TextView
            android:id="@+id/manageWalletView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center_horizontal"
            android:letterSpacing="0.01"
            android:text="@string/manage_wallet"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/splashImage" />

        <TextView
            android:id="@+id/splashText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:paddingHorizontal="15dp"
            android:text="@string/splash_text"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/emailInputCard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/manageWalletView" />

        <androidx.cardview.widget.CardView
            android:id="@+id/emailInputCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="37dp"
            android:layout_marginTop="30dp"
            android:outlineSpotShadowColor="@color/card_bg_light_blue"
            app:cardCornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/splashText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/card_bg_light_blue"
                android:fontFamily="@font/sf_pro_display_bold"
                android:hint="@string/email"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:paddingVertical="15dp"
                android:paddingStart="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textCursorDrawable="@color/black"
                android:textSize="15sp" />

        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/getStartedButton"
            android:layout_width="0dp"
            android:layout_height="63dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/blue"
            android:outlineSpotShadowColor="@color/white"
            android:text="@string/get_started"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="10dp"
            app:elevation="60dp"
            app:layout_constraintEnd_toStartOf="@+id/signInButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailInputCard" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signInButton"
            android:layout_width="0dp"
            android:layout_height="63dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="@color/white"
            android:outlineSpotShadowColor="@color/white"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            app:cornerRadius="10dp"
            app:elevation="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/getStartedButton"
            app:layout_constraintTop_toBottomOf="@+id/emailInputCard"
            app:strokeColor="@color/blue"
            app:strokeWidth="2dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>