<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="4dp"
        android:layout_marginTop="21dp"
        android:src="@drawable/chevron_left"
        android:background="@android:color/transparent"
        android:padding="5dp"/>
    
    <androidx.cardview.widget.CardView
        android:id="@+id/transactionIconBackground"
        android:layout_width="56dp"
        android:layout_height="56dp"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="16dp"
        app:cardBackgroundColor="@color/blue"
        app:cardCornerRadius="13dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/transactionIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/shopping_bag"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/transactionName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/transactionIconBackground"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:text="@string/impact_music_app_premium"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:fontFamily="@font/sf_pro_display_bold"/>

    <TextView
        android:id="@+id/transactionType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/transactionName"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:text="@string/expense"
        android:textSize="14sp"
        android:textColor="@color/dark_gray"
        android:fontFamily="@font/sf_pro"/>

    <TextView
        android:id="@+id/dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/transactionName"
        app:layout_constraintStart_toEndOf="@id/transactionType"
        android:layout_marginStart="6dp"
        android:layout_marginTop="15dp"
        android:text="•"
        android:textSize="14sp"
        android:textColor="@color/dark_gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/transactionName"
        app:layout_constraintStart_toEndOf="@id/dot"
        android:layout_marginStart="6dp"
        android:layout_marginTop="15dp"
        android:text="@string/recurring"
        android:textSize="14sp"
        android:textColor="@color/dark_gray"
        android:fontFamily="@font/sf_pro"/>

    <TextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/transactionType"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/category"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/sf_pro"/>

    <TextView
        android:id="@+id/transactionCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/transactionType"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/entertainment"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/sf_pro"/>

    <View
        android:id="@+id/firstDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:background="@color/gray_divider"
        app:layout_constraintTop_toBottomOf="@+id/category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/dateAndTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/firstDivider"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/date_and_time"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/sf_pro"/>

    <TextView
        android:id="@+id/dateAndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/firstDivider"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:text="22 Jan, 17:38"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/sf_pro"/>

    <View
        android:id="@+id/secondDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:background="@color/gray_divider"
        app:layout_constraintTop_toBottomOf="@+id/dateAndTimeText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addNotesLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:paddingVertical="15dp"
        app:layout_constraintTop_toBottomOf="@id/secondDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/addNotesBlueCard"
            android:layout_width="36dp"
            android:layout_height="36dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:cardBackgroundColor="@color/card_bg_light_blue"
            app:cardCornerRadius="8dp"
            app:cardElevation="60dp"
            android:outlineSpotShadowColor="@color/background"/>

        <TextView
            android:id="@+id/addNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/addNotesDetail"
            app:layout_constraintStart_toEndOf="@+id/addNotesBlueCard"
            android:layout_marginStart="12dp"
            android:text="@string/add_notes"
            android:textSize="16sp"
            android:textColor="@color/blue"
            android:fontFamily="@font/sf_pro_display_bold"/>

        <TextView
            android:id="@+id/addNotesDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addNotes"
            app:layout_constraintStart_toEndOf="@+id/addNotesBlueCard"
            android:layout_marginStart="12dp"
            android:text="@string/add_notes_detail"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/sf_pro"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <TextView
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/addNotesLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/history"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/sf_pro_display_bold"/>

    <TextView
        android:id="@+id/transactionNumberTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/history"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/number_of_transactions"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/sf_pro"/>

    <TextView
        android:id="@+id/transactionNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/history"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:text="26"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/sf_pro"/>

    <View
        android:id="@+id/thirdDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:background="@color/gray_divider"
        app:layout_constraintTop_toBottomOf="@+id/transactionNumberTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/averageSpent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/thirdDivider"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/average_spent"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/sf_pro"/>

    <TextView
        android:id="@+id/paymentsNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/averageSpent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:text="26 payments"
        android:textSize="14sp"
        android:textColor="@color/dark_gray"
        android:fontFamily="@font/sf_pro" />

    <TextView
        android:id="@+id/averageSpentAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/thirdDivider"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="18dp"
        android:text="$9.99"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/sf_pro"/>

    <View
        android:id="@+id/fourthDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:background="@color/gray_divider"
        app:layout_constraintTop_toBottomOf="@+id/paymentsNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/totalSpent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fourthDivider"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/total_spent"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/sf_pro"/>

    <TextView
        android:id="@+id/paymentsNumber2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/totalSpent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:text="26 payments"
        android:textSize="14sp"
        android:textColor="@color/dark_gray"
        android:fontFamily="@font/sf_pro" />

    <TextView
        android:id="@+id/totalSpentAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fourthDivider"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="18dp"
        android:text="$259.74"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/sf_pro"/>

    <View
        android:id="@+id/fifthDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:background="@color/gray_divider"
        app:layout_constraintTop_toBottomOf="@+id/paymentsNumber2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/somethingWrongLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:paddingVertical="15dp"
        app:layout_constraintTop_toBottomOf="@id/fifthDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/somethingWrongRedCard"
            android:layout_width="36dp"
            android:layout_height="36dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:cardBackgroundColor="@color/red"
            app:cardCornerRadius="8dp"
            app:cardElevation="60dp"
            android:outlineSpotShadowColor="@color/background"/>

        <TextView
            android:id="@+id/somethingWrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/somethingWrongDetail"
            app:layout_constraintStart_toEndOf="@+id/somethingWrongRedCard"
            android:layout_marginStart="12dp"
            android:text="@string/something_wrong"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/sf_pro"/>

        <TextView
            android:id="@+id/somethingWrongDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/somethingWrong"
            app:layout_constraintStart_toEndOf="@+id/somethingWrongRedCard"
            android:layout_marginStart="12dp"
            android:text="@string/contact_support"
            android:textSize="14sp"
            android:textColor="@color/dark_gray"
            android:fontFamily="@font/sf_pro"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>